app2/ingressapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-pod
  template:
    metadata:
      labels:
        app: app2-pod
    spec:
      containers:
      - name: nginx
        image: sowmithdocker/app2:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2-pod
  ports:
  - protocol: TCP
    port: 80 #service-port
    targetPort: 80 #container-port

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: alb-ingress-group
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=roboshop
spec:
  ingressClassName: alb
  rules:
  - host: "app2.nextgensquare.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2
            port:
              number: 80
